--- a/app/src/main/res/layout/fragment_grade_point_preference.xml
+++ b/app/src/main/res/layout/fragment_grade_point_preference.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.calc.cgpa.cgpacalculator.GradePointPreference">
+    tools:context="com.calc.cgpa.cgpacalculator.preference.GradePointPreference">
 
 
     <LinearLayout
