--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,7 +2,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity" >
+
+    <item android:id="@+id/action_save"
+        android:icon="@android:drawable/ic_menu_save"
+        android:title="@string/action_save"
+        android:orderInCategory="99"
+        app:showAsAction="ifRoom" />
+
     <item android:id="@+id/action_settings"
+        android:icon="@android:drawable/ic_menu_manage"
         android:title="@string/action_settings"
         android:orderInCategory="100"
         app:showAsAction="never" />
