--- a/app/src/main/res/layout/fragment_calculator.xml
+++ b/app/src/main/res/layout/fragment_calculator.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#fff4f4f4"
@@ -62,7 +63,7 @@
         <GridView
             android:id="@+id/grid_view_credit"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="56dp"
             android:columnWidth="90dp"
             android:numColumns="4"
             android:verticalSpacing="10dp"
@@ -89,7 +90,7 @@
         <GridView
             android:id="@+id/grid_view_grade"
             android:layout_width="match_parent"
-            android:layout_height="110dp"
+            android:layout_height="104dp"
             android:layout_weight="1"
             android:columnWidth="90dp"
             android:numColumns="4"
