--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,10 @@
     <color name="even">#ff00a5d8</color>
     <color name="odd">#79CFFF</color>
     <color name="background">#00BFFF</color>
-    <color name="button_normal">#00BFFF</color>
-    <color name="button_focused">#ff00a9e1</color>
-    <color name="button_pressed">#ff009ed2</color>
+    <!--<color name="button_normal">#00BFFF</color>-->
+    <!--<color name="button_focused">#ff00a9e1</color>-->
+    <!--<color name="button_pressed">#ff009ed2</color>-->
+    <color name="button_normal">#ff535353</color>
+    <color name="button_focused">#ff979797</color>
+    <color name="button_pressed">#ff969799</color>
 </resources>
