--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -8,4 +8,11 @@
         <item>#fff4f4f4</item>
         <item>#ffffffff</item>
     </string-array>
+    <string-array name="options_array">
+        <item>CGPA Calculator</item>
+        <item>Result History</item>
+        <item>Grading System</item>
+        <item>Settings</item>
+        <item>About</item>
+    </string-array>
 </resources>
